# Pickup-hoops

./: .gitignore  Dockerfile  README.md  compose.yaml  dashboard.py  pyproject.toml  seed.py
api/: auth.py  database.py  main.py  models.py
docs/: EX3-notes.md
docs/runbooks/: compose.md
scripts/: demo.sh  refresh.py  seed.py
tests/: test_api.py  test_refresh.py
ui/: dashboard.py
